--- a/SRC/requirements.txt
+++ b/SRC/requirements.txt
@@ -21,7 +21,7 @@ cryptography==2.6.1
 Django==1.11.29
 docopt==0.6.1
 enum34==1.1.6
-Flask==0.10.1
+flask>=1.0.0
 funcsigs==1.0.2
 future==0.17.1
 futures==3.3.0
