--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,4 +37,4 @@ jobs:
     - name: Test with pytest
       working-directory: SRC
       run: |
-       pytest petrol.py
+       pytest __main__.py
