--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,7 +12,10 @@ on:
 jobs:
   build:
 
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: 
+      ubuntu-latest
+      macos-latest
+      windows-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
